[B]Version 0.2.5[/B]
- 
- 
- 
### To see the updated graphic in the Favorites Folder, you currently have to back up a page and re-enter the Favorites Folder that way.
### At first I had it set to forward back to the Favorites Folder after changing the fanart (with the updated graphic.  A problem accured when trying to go back from that menu, you'd end up at the update stage, so I did away with the page forward.
### I might see about adding this for movies at a later time.
### A new feature for TV Shows in Favorites.
- (2013-08 -23) New Feature: Change Fanart.
- New Graphics: fanart.jpg and icon.png have been updated.

[B]Version 0.2.4[/B]
- Fixed Plot Descriptions to now display for Movies in the Favorite Folder(s).
### Once fanart has been saved to the Wallpaper Folder, you then may set it as a background or use it as you wish.  The method for setting the background(s) in skins may very, so I have not setup a method for handling this within the addon/plugin at this time.
### Movie fanart tend to "currently" be around 300x169.  I might look into getting the larger sized ones at a later time.
### TV Show fanart tend to be .jpg's around 1280x720.  Some are greater or lesser in size.
### Wallpaper Folder path added to Settings too.
### Added to in Favorites Folders as well as the most common other folders that allow for Fanart MetaData.
- "Download Wallpaper" added to ContextMenuItems for Movies and TV Shows where possible.

[B]Version 0.2.3[/B]
### *Feature Dedication* Note: jDownloader Download Method(s) -- HeLikesIt (XBMCHUB Forums) for his request of this feature.
### Currently there is no check to make sure that the jDownloader plugin actually exists on your copy of XBMC, so please make sure you have it installed in the default, usual, folder and have it and jDownloader setup as needed by the jDownloader plugin.