@@ -1,5 +1,14 @@
 
 
+[COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 3][/COLOR]
+[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.7
+
+[COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 2][/COLOR]
+[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.6
+
+[COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 1][/COLOR]
+[COLOR red][B]News:[/B][/COLOR]  Updates for Host Menu and Movie Listings.
+
 [COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 4][/COLOR]
 [COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.6
 
